--- a/Javascript/9-css/origem.html
+++ b/Javascript/9-css/origem.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Origem CSS: Externo, Interno e Inline</title>
+    <link rel="stylesheet" href="css/externo.css">
+    
     <style>
-        /* ... */
+        body {
+            background-color: aquamarine;
+        }
     </style>
+    
 </head>
 
-<body>
+<body style="background-color: chartreuse;">
     <h1>E agora?</h1>
 </body>
 
