--- a/Javascript/9-css/overflow.html
+++ b/Javascript/9-css/overflow.html
@@ -9,6 +9,8 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            overflow: hidden;/*esconde o que ultrapassar a div*/
+            overflow: scroll; /* cria um scroll dentro da div*/ 
         }
     </style>
 </head>
