--- a/Javascript/9-css/seletores.html
+++ b/Javascript/9-css/seletores.html
@@ -6,7 +6,73 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        /* SELETOR UNIVERSAL
+        * { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+        /* SELETOR de classe
+        .tag { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+        /* SELETOR por ID
+        # aprovados { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+         /* SELETOR por filho direto
+        #anihado > div  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+        /* SELETOR por herança
+        #aninhado section  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+        
+         /* Seletor irmao adjascenste
+        p + ul  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }
+
+         /* Seletor irmaos generalizados
+        p ~ ul  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+         /* Seletor irmaos generalizados
+        p ~ ul  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+         /* Seletor por propriedade. podemos utilizar *= para contem
+        [feira=casa]  { 
+            color: #ff0;
+            background-color: #f77;
+
+        }*/
+
+
+
+
+
     </style>
 </head>
 
