--- a/Javascript/9-css/tamanhoBox.html
+++ b/Javascript/9-css/tamanhoBox.html
@@ -7,6 +7,14 @@
         body {
             font-size: 45px;
         }
+
+        div {
+            background-color: skyblue;
+            width: 100%;
+            padding: 100px;
+            border: solid 10px; 
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
