--- a/Javascript/9-css/desafioCard.html
+++ b/Javascript/9-css/desafioCard.html
@@ -5,20 +5,57 @@
     <meta charset="UTF-8">
     <title>Desafio Card</title>
     <style>
-        /* ... */
+        .curso {
+            width: 300px;
+            height: 350px;
+            box-sizing: border-box;
+            display: inline-block;
+            box-shadow: 0px 0px 10px grey;
+            margin: 20px;
+        }
+        img {
+            width: 280px;
+            height: 150px;
+            margin: 10px;
+            margin-bottom: 0px;
+            border: .1px dashed grey;
+        }
+        .curso-info {
+            font-size: 22px;
+            font-family: monospace;
+            margin: 10px;
+            height: 100px;
+            overflow: hidden;
+        }
+
+        h4, span {
+            margin: 0px;
+        }
+
+        .curso-preco {
+            height: 50px;
+            margin: 20px;
+            text-align: right;
+            font-family: monospace;
+        } 
+        .preco-de {
+            color: red;
+            font-size: 20px;
+            text-decoration: line-through;
+        }
+
+        .preco-por {
+            color: green;
+            font-size: 30px;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Card</h1>
-
-    <h2>Objetivo</h2>
-    <img src="http://files.cod3r.com.br/curso-web/card.png" height="340" alt="Objetivo">
-
     <h2>Resultado</h2>
     <div>
         <div class="curso">
-            <img src="http://files.cod3r.com.br/curso-web/curso1.jpg" />
+            <img src="../8-html/img/face.png" />
             <div class="curso-info">
                 <h4>Docker: Ferramenta essencial para Desenvolvedores</h4>
                 <p>Prof. Fulano</p>
@@ -29,7 +66,7 @@
             </div>
         </div>
         <div class="curso">
-            <img src="http://files.cod3r.com.br/curso-web/curso2.jpg" />
+            <img src="../8-html/img/foto1.jpg" />
             <div class="curso-info">
                 <h4>Web Moderno com Javascript + Projetos</h4>
                 <p>Prof. Sicrano Filho</p>
