--- a/Javascript/9-css/flexbox2.html
+++ b/Javascript/9-css/flexbox2.html
@@ -4,20 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #02</title>
-    <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container div {
+            box-sizing: border-box;
+        }
+        .flex-container {
+            display: flex;
+            height: 300px;
+            width: 600px;
+        }
+        .flex-container div:nth-child(3) {
+            background-color: indianred;
+            order: 1; /*a order significa um peso quanto maior por ultimo fica inicia no 0*/
+            order: -1;
+            align-self: center;/*alinhamento para o objeto sendo referenciado*/
+            align-self: stretch;
+        }
+        
+        .flex-container div {
+            width: 100px;
+            flex-grow:0;/*flex-grow: referente ao peso e importancia de cada item quanto maior dividindo 
+                        em espaços iguais o tamanho do espaço se todos tiverem o mesmo peso ocuparão o mesmo espaço
+                        se algum tiver um peso maior ele pode ocupar 2 espaços os invés de 1*/
+            flex-grow: 1;            
+        }
+        .flex-container div:nth-child(1) {
+            flex-grow: 2;
+        }
+        .flex-container {
+            width: 300px;
+            flex-shrink: 1;/*ao contrario o flex-grow o flex-shrink define o quanto vai diminuir */
+        }
+        .flex-container div:nth-child(1) {
+            flex-shrink: 5;
+        }
+
+
     </style>
 </head>
 
 <body>
-    <div class="flex-container tag nolabel">
-        <div class="tag nolabel">1</div>
-        <div class="tag nolabel">2</div>
-        <div class="tag nolabel">3</div>
-        <div class="tag nolabel">4</div>
+    <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
     </div>
-    <script src="js/tag.js"></script>
 </body>
 
 </html>
