--- a/Javascript/9-css/flexbox3.html
+++ b/Javascript/9-css/flexbox3.html
@@ -4,20 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #03</title>
-    <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div{
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container div{
+            box-sizing: border-box;
+        }
+
+        .flex-container {
+            display: flex;
+        }
+
+        .flex-container div {
+            flex-basis: 100px;/*o tamanho do conteudo conforme a orientação coluna ou linha*/
+        }
     </style>
 </head>
 
 <body>
-    <div class="flex-container tag nolabel">
-        <div class="tag nolabel">1</div>
-        <div class="tag nolabel">2</div>
-        <div class="tag nolabel">3</div>
-        <div class="tag nolabel">4</div>
+    <div class="flex-container">
+        <div >1</div>
+        <div >2</div>
+        <div >3</div>
+        <div >4</div>
     </div>
-    <script src="js/tag.js"></script>
 </body>
 
 </html>
