--- a/Javascript/9-css/mediaQuery.html
+++ b/Javascript/9-css/mediaQuery.html
@@ -12,6 +12,24 @@
             border: solid 5px;
             display: none;
         }
+
+        @media (max-width: 600px) {
+            .muito-pequeno {
+                display: block;
+            }
+        }
+        /* utilizando o operador OU*/
+        @media (max-width: 1000px), (orientation: portrait) {
+            .pequeno-retrato {
+                display: block;
+            }
+        }
+        /* utilizando o operador E*/
+        @media (min-width: 500px) and (max-width: 1000px) {
+            .intervalo {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
