--- a/Javascript/9-css/texto.html
+++ b/Javascript/9-css/texto.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Texto</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <style>
         /* ... */
         * {
@@ -16,6 +15,34 @@
             flex-direction: column;
             align-items: center;
         }
+
+        p {
+            font-size: 1em;
+
+        }
+
+        .botao {
+            text-decoration: none;
+            color: white;
+            border-radius: 5px;
+            padding: 5px;
+            margin: 20px;
+        }
+
+        .destaque {
+            background-color: skyblue;
+            box-shadow: 1px 1px 1px grey;
+
+        }
+        .destaque:hover {
+            transition: .5s;
+            background-color: steelblue;
+        }
+        .destaque:active {
+            background-color: whitesmoke;
+        }
+
+
     </style>
 </head>
 
@@ -26,7 +53,7 @@
             <br>legal!!!
         </p>
     </div>
-    <a href="http://google.com" class="botao destaque">Google</a>
+    <a href="index.html" class="botao destaque">Google</a>
 </body>
 
 </html>
