--- a/Javascript/9-css/unidades1.html
+++ b/Javascript/9-css/unidades1.html
@@ -5,7 +5,22 @@
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+        .unidades-absolutas {
+            position: absolute;
+            font-size: 40px;
+            padding: 20px;
+            border: solid 5px;
+            margin: 30px;
+            width: 4cm;
+            height: 20mm;
+            top: 150px;
+            left: 200px;
+        }
+        .unidades-relativas{
+            position: absolute;
+            font-size: 4em;
+            
+        }
     </style>
 </head>
 
