--- a/Javascript/10-dom/acessandoAtributos1.html
+++ b/Javascript/10-dom/acessandoAtributos1.html
@@ -9,13 +9,23 @@
 
 <body class='conteudo exercicio'>
     <div>
-        <a href='https://www.cod3r.com.br'>Cod3r</a>
+        <a href='./index.html'>Cod3r</a>
     </div>
     <div id='primeiro'>
-        <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
+        <img src='./imgs/passaro.png' alt='logo'>
     </div>
     <script>
-        // ...
+        const img = document.querySelector('img')
+
+        console.log('getAttribute', img.getAttribute('src'))
+        console.log('src' , img.src)
+        console.log('["src"]', img['src'])
+
+        const src = img.getAttributeNode('src')
+        console.log('atributo src .............')
+        console.log('NodeType', src.nodeType)//2 é um atributo e 1 é tag
+        console.log('NodeName', src.nodeName)// nome do atributo ou tag
+        console.log('nodeValue', src.nodeValue)// o que tiver dentro do atibuto
     </script>
 </body>
 
