--- a/Javascript/10-dom/modificandoHTML2.html
+++ b/Javascript/10-dom/modificandoHTML2.html
@@ -12,7 +12,15 @@
         <p>Texto Inicial</p>
     </div>
     <script>
-        // ...
+        const div =  document.querySelector('div')
+
+        div.innerHTML = 'Texto Alterado'
+        //div.outerHTML = '<p>novo</p>' //altera não só por dentro da tag mais a tag tambem
+        div.insertAdjacentHTML('beforebegin', '<p>antes do inicio</p>')
+        div.insertAdjacentHTML('afterbegin', '<p>depois do inicio</p>')
+        div.insertAdjacentHTML('beforeend', '<p>antes do fim</p>')
+        div.insertAdjacentHTML('afterend', '<p>depois do fim</p>')
+
     </script>
 </body>
 
