--- a/Javascript/10-dom/modificandoHTML1.html
+++ b/Javascript/10-dom/modificandoHTML1.html
@@ -9,7 +9,32 @@
 
 <body class='conteudo exercicio'>
     <script>
-        // ...
+        const body = document.querySelector('body')
+
+        const div1 = document.createElement('div')
+        div1.classList.add('destaque')
+        div1.innerHTML = 'Primeiro'
+
+        const div2 = document.createElement('div')
+        div2.setAttribute('wm-atributo', 'valor')
+        div2.innerHTML = 'Segundo'
+
+        const p = document.createElement('p')
+        p.innerHTML = 'terceiro'
+        const div3 = document.createElement('div')
+        div3.appendChild(p)
+
+        body.appendChild(div1)
+        body.appendChild(div2)
+        body.appendChild(div3)
+
+        const texto = document.createTextNode('antes...')
+        div3.insertBefore(texto , div3.childNodes[0])//voce diz antes de qual filho voce quer adicionar
+
+        const div4 = div3.cloneNode(true)//clonar elementos (true é clonar ele e seus filhos. False somente ele)
+        body.appendChild(div4)
+
+        body.removeChild(div2)//remover tags
     </script>
 </body>
 
