--- a/Javascript/10-dom/trabalhandoComEventos3.html
+++ b/Javascript/10-dom/trabalhandoComEventos3.html
@@ -45,7 +45,24 @@
     </div>
     <div class="direita" wm-dropzone></div>
     <script>
-        // ...
+        const items  = document.querySelectorAll('[wm-dropzone] .item')
+        items.forEach((item, index) => {
+            item.draggable = true//permite voce pegar o elemento
+            item.id = item.id || `draggable-item-${index}`
+            item.ondragstart = e => e.dataTransfer.setData('item-id', e.target.id)
+        })
+
+        const dropzone = document.querySelectorAll('[wm-dropzone]')
+        dropzone.forEach(dropzone => {
+            dropzone.ondragover = e => e.preventDefault()
+            dropzone.ondrop = function(e) {
+                const id = e.dataTransfer.getData('item-id')
+                const item = document.getElementById(id)
+                //e.target.appendChild(item)
+                dropzone.appendChild(item)
+            }
+        })
+
     </script>
 </body>
 
