--- a/Javascript/11-ajax/fetch2.html
+++ b/Javascript/11-ajax/fetch2.html
@@ -29,6 +29,34 @@
     </form>
     <div id="resultado"></div>
     <script>
-        // ...
+        document.usuarioForm.onsubmit = async e => {
+            e.preventDefault()
+
+            const form = e.target
+            const data = new FormData(form)
+            data.append('ajax', true) 
+
+            const options = {
+                method: form.method,
+                body: new URLSearchParams(data)
+            }
+
+            fetch(form.action, options)
+            /*
+            .then(response => response.json())
+            .then(json => {
+                resultado.innerHTML = JSON.stringify(json)  
+                const resultado = document.getElementById('resultado')
+            })
+            */
+           const resultado = document.getElementById('resultado')
+            try {
+                const resp = await fetch(form.action, options)
+                const json = await resp.json()
+                resultado.innerHTML = JSON.stringify(json)
+            } catch (e) {
+                resultado.innerHTML = e
+            }
+        }
     </script>
 </body>
