--- a/Javascript/14-jquery/selecionandoElementos2.html
+++ b/Javascript/14-jquery/selecionandoElementos2.html
@@ -81,6 +81,31 @@
         <p>Cod3r Ensino</p>
     </footer>
     <script>
-        // ...
+        const comBorda = {'border':'solid 8px orange'}
+        const semBorda = {'border': 'none'}
+
+        $('a[href="#link3"]').parent().css(comBorda).css(semBorda)//pega o elemento pai do seletor
+
+        $('li:last').prev().css(comBorda).css(semBorda)//pega o elemento anterior do seletor
+
+        $('a[href="#link3"]').parent().next().css(comBorda).css(semBorda)//next pega o proximo elemento
+
+        $('a[href="#link1"]').parents().css(comBorda).css(semBorda)//todos os elementos pai mais até o html
+
+        $('a[href="#link1"]').parentsUntil($('body')).css(comBorda).css(semBorda)//pega os elementos pai até o que foi passado 
+
+        $('main').children().css(comBorda).css(semBorda)//pega os elementos filhos diretos
+
+        $('body').find('a').css(comBorda).css(semBorda)//procura o elemento dentro do seletor
+
+        const elementoDom = document.getElementsByClassName('menu')
+
+        $(elementoDom).css(comBorda)//pega a partir de um seletor DOM
+
+        $('main').children().each((indice, elemento) => $(elemento).css(comBorda))//para cada elemento
+
+
+
+
     </script>
 </body>
