--- a/MiniProjetos/ApiLyrics/Index.html
+++ b/MiniProjetos/ApiLyrics/Index.html
@@ -4,14 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+   <script src="js.js"></script>
     <title></title>
 </head>
 
 <body>
-<script src="teste.js" type="text/javascript" charset="utf-8">
-  
-</script>
-
+  <div class="l"></div>
 </body>
 </html>
