--- a/MiniProjetos/ApiLyrics/Index.html
+++ b/MiniProjetos/ApiLyrics/Index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script src="js.js"></script>
+    
     <title></title>
 </head>
 
 <body>
-  <div class="l"></div>
+<script src="js.js" type="text/javascript" charset="utf-8"></script>
+
 </body>
 </html>
