--- a/MiniProjetos/ApiLyrics/Index.html
+++ b/MiniProjetos/ApiLyrics/Index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.3.1/fetch.js"></script>
     
     <title></title>
 </head>
