--- a/Javascript/14-jquery/modificandoHTML1.html
+++ b/Javascript/14-jquery/modificandoHTML1.html
@@ -15,6 +15,23 @@
     <div id='conteudo3'></div>
 
     <script>
-        // ...
+        $('#conteudo1').append('<p>1</p>')
+
+        const elementos = [
+            //ao colocar uma tag dentro do Jquery deixa de ser um seletor e se torna um elemento
+            $('<li>').append('Feijão'),
+            $('<li>').append('Arroz'),
+            $('<li>').append('Carne')
+        ]
+
+        const lista = $('<ul><li>Sorvete</li></ul>').prepend(elementos)//prepend adiciona antes do conteudo
+
+        $('#conteudo2').append(lista)
+
+        $('#conteudo3').append('<h1>1</h1>').append('<h1>2</h1>').prepend('<h1>0</h1>')
+
+        $('#conteudo3').html('<h1>123</h1>')//html substitui os elementos existentens
+
+        $('#conteudo3').text('<h1>1</h1>')//coloca o texto literal
     </script>
 </body>
