--- a/MiniProjetos/TodoList/index.html
+++ b/MiniProjetos/TodoList/index.html
@@ -14,16 +14,11 @@
         </div>
         <ol class="naoCompleta">
             <h3>Não Completa</h3>
-            <li>
-                <button><i class="fa fa-check"></i></button>
-                <button><i class="fa fa-trash"></i></button>
-            </li>
+           
         </ol>
-        <ol class="Completa">
+        <ol class="completa">
             <h3>Completa</h3>
-            <li>
-                <button><i class="fa fa-trash"></i></button>
-            </li>
+            
         </ol>
 
     </div>
