--- a/Projetos/LeitorTxt/index.html
+++ b/Projetos/LeitorTxt/index.html
@@ -22,27 +22,11 @@
 
         <main>
             <div class="left">
-                <div class="buscar">
-                    <label for="text">CAMPO-1: </label>
-                    <input type="text" id="txt1">
-                    <label for="number">N° Digitos: </label>
-                    <input type="number" id="n1">
+                <div class="busca">
+                    <input type="text" placeholder="Digite o campo"><button class="add">Add</button>
+                    <ol class="lista"></ol>
                 </div>
-
-                <div class="buscar">
-                    <label for="text">CAMPO-2: </label>
-                    <input type="text" id="txt2">
-                    <label for="number">N° Digitos: </label>
-                    <input type="number" id="n2">
-                </div>
-
-                <div class="buscar">
-                    <label for="text">CAMPO-3: </label>
-                    <input type="text" id="txt3">
-                    <label for="number">N° Digitos: </label>
-                    <input type="number" id="n3">
-                </div>
-                <label id="lbl" for="file">SELECIONAR ARQUIVO</label>
+                <label id="lbl" for="file">SELECIONAR ARQUIVO <i class="fas fa-file-download"></i></label>
                 <input type="file" onchange="lerArquivo()" id="file">
             </div>
 
