--- a/Projetos/LeitorTxt/index.html
+++ b/Projetos/LeitorTxt/index.html
@@ -6,6 +6,7 @@
     <title>Leitor TXT</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
+    <script type="text/javascript" src="./js/FileSaver.min.js"></script>
     <script src="./js/xlsx.full.min.js"></script>
 
 </head>
@@ -19,7 +20,6 @@
         <div class="titulo">
             <h1 class="titulo">Buscador de TXT</h1>
         </div>
-
         <main>
             <div class="left">
                 <div class="busca">
