Conversor para JSON

--- a/Projetos/LeitorTxt/index.html
+++ b/Projetos/LeitorTxt/index.html
@@ -35,7 +35,7 @@
                     <div class="icon">
                         <label for="excel"><i class="far fa-file-excel"></i></label>
                         <label for="csv"><i class="fas fa-file-csv"></i></label>
-                        <label for="txt"><i class="far fa-file-alt"></i></label>
+                        <label for="txt"><img  src="./img/json-file.png"></label>
                     </div>
                     <div class="select">
                         <input type="radio" id="excel" checked name="unico" value="excel">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <button class="btn" onclick="converterArquivo()">GERAR</button>
+                <button class="btn" onclick="converterArquivo()">GERAR ARQUIVO</button>
             </div>
 
         </main>
