--- a/Javascript/14-jquery/eventos3.html
+++ b/Javascript/14-jquery/eventos3.html
@@ -21,11 +21,32 @@
 <body class='conteudo exercicio'>
     <h1>Eventos #03</h1>
     <div id='div1'>1</div>
-    <div id='div2'>1</div>
+    <div id='div2'>2</div>
     <input id='input1' type='text' placeholder='Digite Algo!'>
     <span id='resultado'></span>
 
     <script>
-        // ...
+         function exibirDadosEvento(e){
+            $('#resultado').empty()
+            const div1 = $('<div>')
+            const div2 = $('<div>')
+
+            $('#resultado').append(div1,div2)
+            div1.append(`target: ${e.target.id}`)
+
+            const rt = e.relatedTarget ? e.relatedTarget.tagName : null
+
+            div1.append(`<br>relatedtarget: ${rt}`)//com quem está relacionado  
+            div1.append(`<br>type: ${e.type}`)//tipo do evento  
+            div1.append(`<br>which: ${e.which}`)//qual a tecla
+
+            div2.append(`pageX: ${e.pageX}`)
+            div2.append(`<br>pageY: ${e.pageY}`)
+            div2.append(`<br>clientX: ${e.clientX}`)
+            div2.append(`<br>clientY: ${e.clientY}`)
+         }
+
+         $('#div1, #div2').on('mouseenter mouseleave', exibirDadosEvento)
+         $('input').keyup(exibirDadosEvento)
     </script>
 </body>
