--- a/Javascript/14-jquery/eventos1.html
+++ b/Javascript/14-jquery/eventos1.html
@@ -20,6 +20,35 @@
     <input type="text" placeholder="Cor de Background">
 
     <script>
-        // ...
+        function mostrarPosicaoMouse(e) {
+            $('#posicao').html(`X: ${e.clientX} Y: ${e.clientY}`)
+        }
+
+        $('body').on('mousemove', mostrarPosicaoMouse)//ON voce indica qual o evento
+
+        $('#posicao').mouseover(e => {//mouseover é ao possar o mouse em cima
+            $('body').off('mousemove', mostrarPosicaoMouse)//OFF voce desabilita um evento
+        })
+
+        $('#posicao').mouseleave(e => {
+            $('body').on('mousemove', mostrarPosicaoMouse)
+        })
+
+        let cliques = 0
+        $('body').click(e => {
+            $('#cliques').html(`Cliques: ${++cliques}`)
+        })
+
+
+        const backgroundOriginal = $('body').css('background-color')
+
+        $('input').keyup(function(e) {
+             const valor = $(this).val()
+             if (valor.match(/#[\da-fA-F]{3,6}/)){
+                 $('body').css('background-color', valor)
+             }else{
+                $('body').css('background-color', backgroundOriginal)
+             }
+        })
     </script>
 </body>
