--- a/Javascript/14-jquery/manipulandoAtributos.html
+++ b/Javascript/14-jquery/manipulandoAtributos.html
@@ -23,6 +23,43 @@
     <h1>Manipulando Atributos</h1>
     <div wm-relogio='1000'></div>
     <script>
-        // ...
+        function Relogio(elemento) {
+            const horaCerta = $('<p>').html('0')
+            const botaoMenos = $('<button>').html('-')
+            const botaoMais = $('<button>').html('+')
+
+            const $elemento = $(elemento)
+            $elemento.append(horaCerta, botaoMenos, botaoMais)
+            
+            const getInvervaloAtual = () => parseInt($elemento.attr('wm-relogio'))
+            
+            let temporizador = null
+
+            const iniciar = () => {
+                if (temporizador) clearInterval(temporizador)
+                temporizador = setInterval(() =>{
+                    horaCerta.html(new Date().toLocaleString('pt-br'))
+                }, getInvervaloAtual())
+            }
+
+            const alterarIntervalo = delta => {
+                const novo = Math.max(getInvervaloAtual() + delta, 1000)
+                $elemento.attr('wm-relogio', novo)
+                iniciar()
+
+            }
+
+            botaoMenos.click(e => alterarIntervalo(1000))
+            botaoMais.click(e => alterarIntervalo(-1000))
+            iniciar()
+        }
+
+        $('[wm-relogio]').each((i, e) => new Relogio(e))
+
+        // $('[wm-relogio]').attr('atributo') //Ler o atributo
+        // $('[wm-relogio]').attr('atributo', 1) //alterar ou incluir o valor
+        // $('[wm-relogio]').attr({nome: 'tiago', altura: 15})//incluindo diversos atributos
+        // $('[wm-relogio]').removeAttr('atributo')//remover atributos
+
     </script>
 </body>
