--- a/Javascript/14-jquery/plugin1.html
+++ b/Javascript/14-jquery/plugin1.html
@@ -15,13 +15,34 @@
         Texto 1
         {{ 3 ** 3 }}
         Texto 2
-        {{ console.log('Funcionou!') }}
+        {{ console.log('Funcionou!') }}  
         Texto 3
         {{ (function() { return 'Legal!!!' })() }}
         Texto Final
     </div>
 
     <script>
-        // ...
+
+        //FUNCAO PARA EXECUTAR OS COMANDOS DENTRO DE {{}} (chaves duplas)
+        (function ($){
+            $.fn.interpretar = function () {
+                const retirarChaves = string => string.substring(2, string.length - 2)
+                const conteudo = $(this).html()
+                const expressoesComChaves = conteudo.match(/\{\{.+\}\}/g)
+                const expressoes = expressoesComChaves.map(retirarChaves)
+                const resultados = expressoes.map(e => eval(e)) 
+                
+                let conteudoFinal = conteudo
+                for (let i = 0; i < expressoesComChaves.length; i++) {
+                    conteudoFinal = conteudoFinal.replace(
+                        expressoesComChaves[i], resultados[i]
+                    )
+                }
+                $(this).html(conteudoFinal)
+                return this
+            }
+        })(jQuery)
+
+        $('div').interpretar()
     </script>
 </body>
