--- a/Javascript/15-bootstrap/exercicios/paginas/fundamentos.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/fundamentos.html
@@ -25,6 +25,9 @@
     <hr>
 
     <!-- Espaços -->
+   <div class="mb-5">1</div><!-- mb = margin bottom -->
+   <div class="m-4 py-4">2</div><!-- m = margin / py = paddin eixo Y -->
+   <div class="pt-5">3</div><!-- pt =  padding top  -->
 
     <h1 class="mt-5">3. Cores -
         <small>
