--- a/Javascript/15-bootstrap/exercicios/paginas/componentes.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/componentes.html
@@ -1,5 +1,16 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <div class="display-4">components</div>
+    <p class="lead m-1">exemplos de alguns components </p>
+</div>
+
+<div class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#/paginas/bemVindo.html">HOME</a>
+        </li>
+        <li class="breadcrumb-item active">components</li>
+    </ol>
+</div>
 
 <h1>1. Botões -
     <small>
