--- a/Javascript/15-bootstrap/exercicios/paginas/fundamentos.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/fundamentos.html
@@ -1,5 +1,16 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <div class="display-4">FUNDAMENTOS</div>
+    <p class="lead m-1">alguns recursos importantes do bootstrap</p>
+</div>
+
+<div class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#/paginas/bemVindo.html">HOME</a>
+        </li>
+        <li class="breadcrumb-item active">FUNDAMENTOS</li>
+    </ol>
+</div>
 
 <div class="exercicio">
     <h1>1. Tipografia -
@@ -37,6 +48,9 @@
     <hr>
 
     <!-- Cores -->
+    <div class="my-1 p-3 bg-primary text-light">1</div> <!-- BG =  background -->
+    <div class="my-1 p-3 bg-danger text-white">2</div> <!-- CORES NA DOCUMENTACAO -->
+    <div class="my-1 p-3 bg-warning text-success">3</div>
 
     <h1 class="mt-5">4. Flex -
         <small>
@@ -47,6 +61,11 @@
 
     <!-- Flex -->
 
+    <div class="d-flex flex-column-reverse p-2"><!-- IGUAL DO FLEXBOX CSS -->
+        <div class="align-self-end">1</div>
+        <div class="align-self-center">2</div>
+        <div class="align-self-start">3</div>
+    </div>
     <h1 class="mt-5">5. Imagens -
         <small>
             <a href="https://getbootstrap.com/docs/4.0/content/images/" target="_black">Documentação Oficial</a>
@@ -55,6 +74,12 @@
     <hr>
 
     <!-- Imagens -->
+    <div class="p-2">
+        <img src="/imgs/img1.png" width="400px" class="mx-auto d-block"><!-- COLOCA A IMAGEM NO MEIO -->
+        <img src="/imgs/img1.png" width="400px" class="img-thumbnail"><!-- COLOCA A IMAGEM thubmnail -->
+        <img src="/imgs/img1.png" width="400px" class="img-fluid"><!-- COLOCA A IMAGEM responsiva -->
+    </div>
+
 
     <h1 class="mt-5">6. Float -
         <small>
@@ -64,6 +89,9 @@
     <hr>
 
     <!-- Float -->
+    <div class="m-1 p-3 float-left">1</div>
+    <div class="m-1 p-3 float-right">2</div>
+    <div class="m-1 p-3 float-lg-right">3</div>
 </div>
 
 <style>
