--- a/Javascript/15-bootstrap/exercicios/paginas/grid.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/grid.html
@@ -22,29 +22,92 @@
 
     <!-- Grid Básica -->
 
+    <div class="container-fluid"><!-- AO UTILIZAR CONTAINER FLUID ELE OCUPA A TELA TODA E SE ADAPTA AO TAMANHA Da TELA -->
+        <div class="row">
+            <div class="col bg-primary">1</div>
+            <div class="col bg-danger">2</div>
+            <div class="col bg-warning">3</div>
+            <div class="col bg-info">4</div>
+        </div>
+        <div class="row mt-3"><!--  TEMOS UM TOTAL DE 12 COLUNAS E PODEMOS ESPECIFICAR COL-`numero de colunas` PARA OCUPAR -->
+            <div class="col bg-danger">1</div>
+            <div class="col-4 bg-warning">2</div>
+            <div class="col-5 bg-info">3</div>
+            <div class="col bg-primary">4</div>
+        </div>
+    </div>
+
     <h1 class="mt-5">2. Grid Responsiva</h1>
     <hr>
-
+    <div class="container-fluid"><!--MUDA A O NUMERO DE COLUNAS CONFORME O TAMANHO DA TELA -->
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-primary">1</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-danger">2</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-warning">3</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-info">4</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-success">5</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-secondary">6</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-danger">7</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-info">8</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-success">9</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-secondary">10</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-warning">11</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-primary">12</div>
+        </div>
+    </div>
     <!-- Grid Responsiva -->
 
     <h1 class="mt-5">3. Quebra de Linha</h1>
     <hr>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3 bg-primary">1</div>
+            <div class="col-3 bg-danger">2</div>
+            <div class="col-7 bg-secondary">3</div>
+            <div class="w-100"></div><!-- PODEMOS UTILIZAR ESSA DIV VAZIA COM WIDTH-100% PARA QUERBAR A LINHA ANTES DO LAYOUT -->
+
+            <div class="col-3 bg-warning">4</div>
+        </div>
+    </div>
 
     <!-- Quebra de Linha -->
 
     <h1 class="mt-5">4. Ordem</h1>
     <hr>
 
+    <div class="container-fluid"><!-- ORDER PODEMOS ALTERAR A ORDEM DE COMPONENTES -->
+        <div class="row">
+            <div class="col-4 order-5 bg-primary">1</div>
+            <div class="col-4 order-12 bg-danger">2</div>
+            <div class="col-4 order-1 bg-warning">3</div>
+        </div>
+    </div>
+
     <!-- Ordem -->
 
     <h1 class="mt-5">5. Offset</h1>
     <hr>
 
+    <div class="container-fluid"><!--  OFFSET ELE DEIXA O ESPAÇO VAZIO -->
+        <div class="row">
+            <div class="col-sm-3 offset-sm-7 bg-primary">1</div>
+            <div class="col-sm-4 offset-sm-3 bg-danger">2</div>
+            <div class="col-sm-6 offset-sm-1 bg-warning">3</div>
+        </div>
+    </div>
+
     <!-- Offset -->
 
     <h1 class="mt-5">6. Alinhamento</h1>
     <hr>
-
+    <div class="container-fluid">
+        <div class="row h-300">
+            <div class="col-4 align-self-end bg-primary">1</div>
+            <div class="col-4 align-self-center bg-warning">2</div>
+            <div class="col-4 align-self-start bg-secondary">3</div>
+        </div>
+    </div>
     <!-- Alinhamento -->
 </div>
 
