--- a/Javascript/15-bootstrap/exercicios/paginas/componentes.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/componentes.html
@@ -21,6 +21,31 @@
 
 <!-- Botões -->
 
+<div>
+     <div class="mb-3"><!--  TIPOS COMUNS DE BOTOES -->
+         <button class="btn btn-primary">Salvar</button>
+         <button class="btn btn-danger">Cancelar</button>
+         <button class="btn btn-outline-success">Finalizar</button>
+         <button class="btn btn-danger" disabled>OFF</button>
+         <button class="btn btn-warning" data-toggle="button">SELECIONE</button>
+     </div>
+
+     <div class="btn-group mb-3"> <!-- PODEMOS AGRUPAR OS BOTOES -->
+         <button class="btn btn-info">esquerda</button>
+         <button class="btn btn-info active">centro</button>
+         <button class="btn btn-info">direita</button>
+    </div>
+    <div class="dropdown">
+        <button class="btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">COMPRAR</button>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Paypal</a>
+            <a href="#" class="dropdown-item">PagSeguro</a>
+        </div>
+    </div>
+
+
+</div>
+
 <h1 class="mt-5">2. Progresso -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Documentação Oficial</a>
