--- a/Javascript/15-bootstrap/exercicios/paginas/componentes.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/componentes.html
@@ -55,6 +55,16 @@
 
 <!-- Progresso -->
 
+<div>
+    <div class="progress mb-4">
+        <div class="progress-bar" style="width: 25%;"></div>
+    </div>
+
+    <div class="progress mb-4">
+        <div class="progress-bar progress-bar-striped  progress-bar-animated bg-success" style="width: 60%;" >60%</div>
+    </div>
+</div>
+
 <h1 class="mt-5">3. Mensagens (Alertas) -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Documentação Oficial</a>
@@ -64,6 +74,21 @@
 
 <!-- Alertas -->
 
+<div>
+    <div class="alert alert-success">SUCESSO</div>
+
+    <div class="alert alert-danger">
+        <strong>ERRO!</strong> Ocorreu um erro inesperado.
+        <a href="#" class="alert-link">Mais detalhes!</a>
+    </div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+</div>
+
 <h1 class="mt-5">4. Paginação -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Documentação Oficial</a>
@@ -71,7 +96,20 @@
 </h1>
 <hr>
 
-<!-- Peginação -->
+<!-- Paginação -->
+
+
+<div>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item"><a href="" class="page-link">anterior</a></li>
+            <li class="page-item"><a href="" class="page-link">1</a></li>
+            <li class="page-item active"><a href="" class="page-link">2</a></li>
+            <li class="page-item"><a href="" class="page-link">3</a></li>
+            <li class="page-item"><a href="" class="page-link">proximo</a></li>
+        </ul>
+    </nav>
+</div>
 
 <h1 class="mt-5">5. Tooltip -
     <small>
@@ -82,6 +120,11 @@
 
 <!-- Tooltip -->
 
+<div>
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Pense Antes!">EXCLUIR</button>
+</div>
+
+
 <h1 class="mt-5">6. Slider -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Documentação Oficial</a>
@@ -90,6 +133,18 @@
 <hr>
 
 <!-- Slider -->
+<div>
+    <div class="carousel slide" id="slider" data-ride="carousel">
+        <div class="carousel-inner bg-dark">
+            <div class="carousel-item active"><img src="../imgs/slide1.png" alt="Slide 1 " class="d-block mx-auto"></div>
+            <div class="carousel-item"><img src="../imgs/slide2.png" alt="Slide 2" class="d-block mx-auto"></div>
+            <div class="carousel-item"><img src="../imgs/slide3.png" alt="Slide 3" class="d-block mx-auto"></div>
+        </div>
+        <a href="#slider" class="carousel-control-prev" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+        <a href="#slider" class="carousel-control-next" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+    </div>
+</div>
+
 
 <h1 class="mt-5">7. Accordion -
     <small>
@@ -100,6 +155,31 @@
 
 <!-- Accordion -->
 
+<div>
+    <div class="mb-5" id="accordion">
+        <div class="card">
+            <div class="card-header" id="pergunta1">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#resposta1">Quem é o professor?</button>
+                </h5>
+            </div>
+        </div>
+        <div class="collapse" id="resposta1" data-parent="#accordion">
+            <div class="card-body bg-secondary tex">Leonardo</div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="pergunta2">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#resposta2">Quem é o Aluno?</button>
+                </h5>
+            </div>
+        </div>
+        <div class="collapse" id="resposta2" data-parent="#accordion">
+            <div class="card-body bg-secondary tex">Tiago</div>
+        </div>
+    </div>
+</div>
+
 <script>
-    // ...
+    
 </script>
