--- a/Javascript/15-bootstrap/exercicios/paginas/formulario.html
+++ b/Javascript/15-bootstrap/exercicios/paginas/formulario.html
@@ -17,3 +17,34 @@
 </p>
 
 <!-- Formulário -->
+
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">EXEMPLO DE FORMULARIO</h5>
+    </div>
+    <div class="card-body">
+        <form action="" class="container-fluid">
+            <div class="form-row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <label for="nome">NOME</label>
+                        <input type="text" class="form-control" id="nome" placeholder="Informe o nome">
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">@</span>
+                            </div>
+                            <input type="email" class="form-control" id="email" placeholder="informe o Email">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
