Exercicios em VueJS

--- a/Javascript/17-Vue/exercicios/componente.html
+++ b/Javascript/17-Vue/exercicios/componente.html
@@ -15,7 +15,7 @@
     </div>
     <script>
         Vue.component('saudacao', {/* CRIAR UM COMPONENT NO VUE */
-            props: ['nome'],/*  AS PROPS QUE  */
+            props: ['nome'],/*  AS PROPS QUE  SÃO OS PARAMETROS*/
             template: `
                 <div> Bom dia {{ nome }}!</div>
             `
