--- a/Javascript/17-Vue/exercicios/componente2.html
+++ b/Javascript/17-Vue/exercicios/componente2.html
@@ -15,9 +15,9 @@
     </div>
     <script>
         Vue.component('contador', {/* CRIAR UM COMPONENT NO VUE */
-           data: function () {
-                return {
-                    cont : 0
+           data: function () {/* TODO DADO DEVE SER O RETORNO DE UMA FUNÇÃO*/
+                return {/*E TODO RETORNO DEVE SER UM OBJETO*/
+                    cont : 0 
                 }
            },
            methods: {
