--- a/Javascript/17-Vue/exercicios/ifFor.html
+++ b/Javascript/17-Vue/exercicios/ifFor.html
@@ -15,7 +15,10 @@
             <span v-else>Reprovado</span>
 
         </p>
-        <p v-for="num in 5">{{num}}</p>
+        <ul style="list-style: none;">
+            <li v-for="num in 5">{{num}}</li>
+        </ul>
+        
 
     </div>
     <script>
